<resources>
    <string name="app_name">ROAMER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bus">Local Bus</string>
    <string name="menu_coach">Coach</string>
    <string name="menu_train">Train</string>
    <string name="menu_info">Info</string>
    <string name="menu_contributors">Contributors</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
